--- a/src/index.html
+++ b/src/index.html
@@ -12,3 +12,4 @@
   <app-root>Loading...</app-root>
 </body>
 </html>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
